@@ -96,3 +96,4 @@
 - Allow to specify what artifacts to embed at build times {pull}20019[20019]
 - Add --staging option to enroll command {pull}20026[20026]
 - Add `event.dataset` to all events {pull}20076[20076]
+- Prepare packaging for endpoint and asc files {pull}20186[20186]
